--- a/apps/fit-buddy/src/app/dashboard/profile/profile/profile.component.html
+++ b/apps/fit-buddy/src/app/dashboard/profile/profile/profile.component.html
@@ -1,1 +1,11 @@
-<p>profile works!</p>
+<div class="container">
+	<section class="row pt-3">
+		<section class="col-sm-2 text-center">
+			<gt-avatar [width]="200" [height]="200" [source]="photoUrl"> </gt-avatar>
+		</section>
+		<section class="col-sm-10" *ngIf="entries$">
+			<gt-form-builder [entries]="entries$ | async" (submitted)="onSubmitted($event)">
+			</gt-form-builder>
+		</section>
+	</section>
+</div>
