--- a/apps/fit-buddy/src/app/app.component.scss
+++ b/apps/fit-buddy/src/app/app.component.scss
@@ -1,12 +1,12 @@
 .orange-border {
-  border-radius: 25px;
-  border: 2px solid #f89937;
-  height: 100%;
-  padding: 20px;
+	border-radius: 25px;
+	border: 2px solid #e4c70f;
+	height: 100%;
+	padding: 20px;
 }
 .blue-border {
-  border-radius: 25px;
-  border: 2px solid #8181f7;
-  padding: 20px;
-  height: 100%;
+	border-radius: 25px;
+	border: 2px solid #8181f7;
+	padding: 20px;
+	height: 100%;
 }
