--- a/apps/fit-buddy/src/app/login/login/login.component.scss
+++ b/apps/fit-buddy/src/app/login/login/login.component.scss
@@ -2,9 +2,9 @@
 	padding-top: 50px;
 }
 .login-container {
-	border: solid 1px #f89937;
+	border: solid 1px #e4c70f;
 	background-color: #faf5ee;
-	box-shadow: 0 0 10px #e57807;
+	box-shadow: 0 0 10px #e4c70f;
 	border-radius: 25px;
 	min-height: 235px;
 	padding: 30px;
