--- a/apps/fit-buddy/src/app/dashboard/dashboard-layout/dashboard-layout/dashboard-layout.component.html
+++ b/apps/fit-buddy/src/app/dashboard/dashboard-layout/dashboard-layout/dashboard-layout.component.html
@@ -12,6 +12,11 @@
 			[(isSidebarActive)]="isSidebarActive"
 			(logOut)="onLogOut($event)"
 		>
+			<a class="pr-3" (click)="goToCart()"
+				><i class="fa fa-shopping-cart" aria-hidden="true">
+					<span class="badge badge-danger">{{ cartItemsCount$ | async }}</span>
+				</i>
+			</a>
 		</gt-top-bar>
 		<div class="container-fluid">
 			<router-outlet></router-outlet>
