nutrition plan bootstrap

--- a/apps/fit-buddy/src/app/dashboard/nutrition-plan/nutrition-plan/nutrition-plan.component.html
+++ b/apps/fit-buddy/src/app/dashboard/nutrition-plan/nutrition-plan/nutrition-plan.component.html
@@ -1,1 +1,47 @@
-<p>nutrition-plan works!</p>
+<ul>
+	<li>
+		<a>
+			<h2>Lunes</h2>
+			<p>1:30</p>
+			<p>3:30</p>
+			<p>5:30</p>
+			<p>7:30</p>
+		</a>
+	</li>
+	<li>
+		<a>
+			<h2>Martes</h2>
+			<p>Text Content #2</p>
+		</a>
+	</li>
+	<li>
+		<a>
+			<h2>Miércoles</h2>
+			<p>Text Content #3</p>
+		</a>
+	</li>
+	<li>
+		<a>
+			<h2>Jueves</h2>
+			<p>Text Content #4</p>
+		</a>
+	</li>
+	<li>
+		<a>
+			<h2>Viernes</h2>
+			<p>Text Content #5</p>
+		</a>
+	</li>
+	<li>
+		<a>
+			<h2>Sábado</h2>
+			<p>Text Content #6</p>
+		</a>
+	</li>
+	<li>
+		<a>
+			<h2>Domingo</h2>
+			<p>Text Content #2</p>
+		</a>
+	</li>
+</ul>
