--- a/apps/fit-buddy/src/app/dashboard/eshop/product-list/product-list.component.html
+++ b/apps/fit-buddy/src/app/dashboard/eshop/product-list/product-list.component.html
@@ -6,6 +6,7 @@
 			(keywordChange)="updateSeachKeyword($event)"
 		></gt-search-bar>
 	</section>
+	<gt-card></gt-card>
 	<section class="row">
 		<div class="card-group col-sm-12 ml-sm-auto mr-sm-auto">
 			<gt-product-card
