--- a/libs/ui/card/src/lib/card/card.component.html
+++ b/libs/ui/card/src/lib/card/card.component.html
@@ -1,12 +1,65 @@
-<!-- <div class="float-left card effects">
-	<img
-		[src]="cardImage"
-		width="200"
-		class="hvr-grow-shadow"
-		height="320"
-		[ngClass]="{ jump: isJumping }"
-	/>
-	<ng-content></ng-content>
-</div> -->
-<!--
-		class="hvr-float-shadow"-->
+<div class="wrapper">
+	<div class="container">
+		<div class="top">
+			<img
+				src="https://s-media-cache-ak0.pinimg.com/736x/49/80/6f/49806f3f1c7483093855ebca1b8ae2c4.jpg"
+			/>
+		</div>
+		<div class="bottom">
+			<div class="left">
+				<div class="details">
+					<h1>Chair</h1>
+					<p>£250</p>
+				</div>
+				<div class="buy"><i class="fa fa-cart-plus"></i></div>
+			</div>
+			<div class="right">
+				<div class="done"><i class="fa fa-check"></i></div>
+				<div class="details">
+					<h1>Chair</h1>
+					<p>Added to your cart</p>
+				</div>
+				<div class="remove"><i class="fa fa-remove"></i></div>
+			</div>
+		</div>
+	</div>
+	<div class="inside">
+		<div class="icon"><i class="fa fa-info"></i></div>
+		<div class="contents">
+			<table>
+				<tr>
+					<th>Width</th>
+					<th>Height</th>
+				</tr>
+				<tr>
+					<td>3000mm</td>
+					<td>4000mm</td>
+				</tr>
+				<tr>
+					<th>Something</th>
+					<th>Something</th>
+				</tr>
+				<tr>
+					<td>200mm</td>
+					<td>200mm</td>
+				</tr>
+				<tr>
+					<th>Something</th>
+					<th>Something</th>
+				</tr>
+				<tr>
+					<td>200mm</td>
+					<td>200mm</td>
+				</tr>
+				<tr>
+					<th>Something</th>
+					<th>Something</th>
+				</tr>
+				<tr>
+					<td>200mm</td>
+					<td>200mm</td>
+				</tr>
+			</table>
+		</div>
+	</div>
+</div>
