--- a/libs/ui/card/src/lib/card/card.component.scss
+++ b/libs/ui/card/src/lib/card/card.component.scss
@@ -1,31 +1,197 @@
-// .card {
-//   padding: 20px;
-//   border-style: none;
-// }
-// @keyframes jump {
-//   0% {
-//     transform: translate3d(0, 0, 0) scale3d(1, 1, 1);
-//   }
-//   40% {
-//     transform: translate3d(0, 30%, 0) scale3d(0.7, 1.5, 1);
-//   }
-//   100% {
-//     transform: translate3d(0, 100%, 0) scale3d(1.5, 0.7, 1);
-//   }
-// }
-// .jump {
-//   transform-origin: 50% 50%;
-//   animation: jump 0.7s linear alternate infinite;
-// }
+html,
+body {
+	background: #e3e3d8;
+	font-family: sans-serif;
+	padding: 25px;
+}
 
-// img:hover,
-// img:active {
-//   margin: 0.4em;
-//   padding: 1em;
-//   cursor: pointer;
-//   background: #e1e1e1;
-//   text-decoration: none;
-//   color: #666;
-//   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-//   -webkit-font-smoothing: antialiased;
-// }
+.wrapper {
+	width: 300px;
+	height: 500px;
+	background: white;
+	margin: auto;
+	position: relative;
+	overflow: hidden;
+	border-radius: 10px 10px 10px 10px;
+	box-shadow: 0;
+	transform: scale(0.95);
+	transition: box-shadow 0.5s, transform 0.5s;
+	&:hover {
+		transform: scale(1);
+		box-shadow: 5px 20px 30px rgba(0, 0, 0, 0.2);
+	}
+
+	.container {
+		width: 100%;
+		height: 100%;
+		padding-right: 0px;
+		padding-left: 0px;
+		.top {
+			height: 80%;
+			width: 100%;
+			-webkit-background-size: 100%;
+			-moz-background-size: 100%;
+			-o-background-size: 100%;
+			background-size: 100%;
+			img {
+				max-height: 100%;
+			}
+		}
+		.bottom {
+			width: 200%;
+			height: 20%;
+			transition: transform 0.5s;
+			&.clicked {
+				transform: translateX(-50%);
+			}
+			h1 {
+				margin: 0;
+				padding: 0;
+			}
+			p {
+				margin: 0;
+				padding: 0;
+			}
+			.left {
+				height: 100%;
+				width: 50%;
+				background: #f4f4f4;
+				position: relative;
+				float: left;
+				.details {
+					padding: 20px;
+					float: left;
+					width: calc(70% - 40px);
+				}
+				.buy {
+					float: right;
+					width: calc(30% - 2px);
+					height: 100%;
+					background: #f1f1f1;
+					transition: background 0.5s;
+					border-left: solid thin rgba(0, 0, 0, 0.1);
+					i {
+						font-size: 30px;
+						padding: 30px;
+						color: #254053;
+						transition: transform 0.5s;
+					}
+					&:hover {
+						background: #a6cdde;
+					}
+					&:hover i {
+						transform: translateY(5px);
+						color: #00394b;
+					}
+				}
+			}
+			.right {
+				width: 50%;
+				background: #a6cdde;
+				color: white;
+				float: right;
+				height: 200%;
+				overflow: hidden;
+				.details {
+					padding: 20px;
+					float: right;
+					width: calc(70% - 40px);
+				}
+				.done {
+					width: calc(30% - 2px);
+					float: left;
+					transition: transform 0.5s;
+					border-right: solid thin rgba(255, 255, 255, 0.3);
+					height: 50%;
+					i {
+						font-size: 30px;
+						padding: 30px;
+						color: white;
+					}
+				}
+				.remove {
+					width: calc(30% - 1px);
+					clear: both;
+					border-right: solid thin rgba(255, 255, 255, 0.3);
+					height: 50%;
+					background: #bc3b59;
+					transition: transform 0.5s, background 0.5s;
+					&:hover {
+						background: #9b2847;
+					}
+					&:hover i {
+						transform: translateY(5px);
+					}
+					i {
+						transition: transform 0.5s;
+						font-size: 30px;
+						padding: 30px;
+						color: white;
+					}
+				}
+				&:hover {
+					.remove,
+					.done {
+						transform: translateY(-100%);
+					}
+				}
+			}
+		}
+	}
+
+	.inside {
+		z-index: 9;
+		background: #92879b;
+		width: 140px;
+		height: 140px;
+		position: absolute;
+		top: -70px;
+		right: -70px;
+		border-radius: 0px 0px 200px 200px;
+		transition: all 0.5s, border-radius 2s, top 1s;
+		overflow: hidden;
+		.icon {
+			position: absolute;
+			right: 85px;
+			top: 85px;
+			color: white;
+			opacity: 1;
+		}
+		&:hover {
+			width: 100%;
+			right: 0;
+			top: 0;
+			border-radius: 0;
+			height: 80%;
+			.icon {
+				opacity: 0;
+				right: 15px;
+				top: 15px;
+			}
+			.contents {
+				opacity: 1;
+				transform: scale(1);
+				transform: translateY(0);
+			}
+		}
+		.contents {
+			padding: 5%;
+			opacity: 0;
+			transform: scale(0.5);
+			transform: translateY(-200%);
+			transition: opacity 0.2s, transform 0.8s;
+			table {
+				text-align: left;
+				width: 100%;
+			}
+			h1,
+			p,
+			table {
+				color: white;
+			}
+			p {
+				font-size: 13px;
+			}
+		}
+	}
+}
