updating planned days

--- a/apps/fit-buddy/src/app/dashboard/nutrition-plan/nutrition-plan/nutrition-plan.component.html
+++ b/apps/fit-buddy/src/app/dashboard/nutrition-plan/nutrition-plan/nutrition-plan.component.html
@@ -1,47 +1,85 @@
-<ul>
-	<li>
-		<a>
-			<h2>Lunes</h2>
-			<p>1:30</p>
-			<p>3:30</p>
-			<p>5:30</p>
-			<p>7:30</p>
-		</a>
-	</li>
-	<li>
-		<a>
-			<h2>Martes</h2>
-			<p>Text Content #2</p>
-		</a>
-	</li>
-	<li>
-		<a>
-			<h2>Miércoles</h2>
-			<p>Text Content #3</p>
-		</a>
-	</li>
-	<li>
-		<a>
-			<h2>Jueves</h2>
-			<p>Text Content #4</p>
-		</a>
-	</li>
-	<li>
-		<a>
-			<h2>Viernes</h2>
-			<p>Text Content #5</p>
-		</a>
-	</li>
-	<li>
-		<a>
-			<h2>Sábado</h2>
-			<p>Text Content #6</p>
-		</a>
-	</li>
-	<li>
-		<a>
-			<h2>Domingo</h2>
-			<p>Text Content #2</p>
-		</a>
-	</li>
-</ul>
+<div class="block-wrap">
+	<div class="block-col">
+		<div class="block block--transition r"><h5>Lunes</h5></div>
+	</div>
+	<div class="block-col">
+		<div class="block block--transition  b block-active"><h5>Martes</h5></div>
+	</div>
+	<div class="block-col">
+		<div class="block block--transition y"><h5>Miércoles</h5></div>
+	</div>
+
+	<div class="block-col">
+		<div class="block block--transition r"><h5>Jueves</h5></div>
+	</div>
+
+	<div class="block-col">
+		<div class="block block--transition b"><h5>Viernes</h5></div>
+	</div>
+
+	<div class="block-col">
+		<div class="block block--transition y"><h5>Sábado</h5></div>
+	</div>
+
+	<div class="block-col">
+		<div class="block block--transition r"><h5>Domingo</h5></div>
+	</div>
+</div>
+
+<div class="planner">
+	<div class="schedule">
+		<div class="tab-pane">
+			<div class="schedule-list">
+				<div class="schedule-item">
+					<div class="time">
+						<span>9</span>
+						<span>am</span>
+					</div>
+					<div class="description free">
+						<div class="description-header">Desayuno</div>
+						<div class="description-content">
+							<p>Tortilla de 4 huevos y 1 vaso de leche de almendras</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="schedule-item">
+					<div class="time">
+						<span>10</span>
+						<span>am</span>
+					</div>
+					<div class="description">
+						<div class="description-header">Media meñana</div>
+						<div class="description-content">
+							<p>6 fresas y media palta</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="schedule-item">
+					<div class="time">
+						<span>11</span>
+						<span>am</span>
+					</div>
+					<div class="description">
+						<div class="description-header">Almuerzo</div>
+						<div class="description-content">
+							<p>200g de pollo y ensalada verde</p>
+						</div>
+					</div>
+				</div>
+
+				<div class="schedule-item">
+					<div class="time">
+						<span>10</span>
+						<span>am</span>
+					</div>
+					<div class="description">
+						<div class="description-header">No Schedule</div>
+						<!--<div class="description-content">&nbsp;</div>-->
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
