--- a/apps/fit-buddy/src/app/dashboard/nutrition-plan/nutrition-plan/nutrition-plan.component.scss
+++ b/apps/fit-buddy/src/app/dashboard/nutrition-plan/nutrition-plan/nutrition-plan.component.scss
@@ -1,219 +1,15 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800");
 $xlt-gray: #efefef;
-$red: #f44336;
-$blue: #1e88e5;
-$yellow: #fdd835;
-
-$hoverTranslate: 12px;
-
-$container-size-h: 135px;
-$container-size-w: 1000px;
-$block-size: 100px;
-
-$ease: cubic-bezier(0.4, 0, 0, 1);
-$ease-in: cubic-bezier(0, 0, 0.2, 1);
-
-.planner {
-	font-family: "Open Sans", sans-serif;
-	width: 394px;
-	margin: 30px auto;
-	box-shadow: 0 0 40px rgba(0, 0, 0, 0.5);
-	border-radius: 5px;
-	overflow: hidden;
-}
-
-.schedule {
-	margin: 0;
-}
-
-a {
-	color: inherit;
-	text-decoration: none;
-}
-
-.schedule-list {
-	padding: 20px;
-	margin-left: 37px;
-	border-left: 2px solid #cccccc;
-	display: block;
-}
-
-.schedule-item {
-	display: block;
-	margin-bottom: 50px;
-	padding: 0;
-	clear: both;
-	min-height: 30px;
-	overflow: visible;
-}
-
-.schedule-item:last-child {
-	margin-bottom: 10px;
-	min-height: 30px;
-}
-
-.time {
-	display: block;
-	float: left;
-	margin-left: -41px;
-	width: 36px;
-	height: 36px;
-	border: 2px solid #cccccc;
-	background-color: #ffffff;
-	color: #cccccc;
-	border-radius: 40px;
-	text-align: center;
-	padding: 0px;
-	line-height: 25px;
-}
-.time span {
-	font-size: 12px;
-	height: 10px;
-	margin: auto;
-	display: block;
-}
-
-.description {
-	display: block;
-	float: left;
-	width: 305px;
-	margin-top: 10px;
-	margin-left: 10px;
-	color: #fd9a4a;
-	font-size: 14px;
-	overflow: visible;
-}
-
-.description .description-content {
-	margin-top: 5px;
-}
-.description .description-content p {
-	font-size: 12px;
-	margin: 0;
-	color: #c5c5c5;
-}
-
-.schedule-item.free .time {
-	border: 2px solid #98cd60;
-}
-
-.schedule-item.free .description .description-header {
-	background-color: #ffffff;
-	color: #c5c5c5;
-	display: block;
-	float: left;
-}
-
-.schedule-item.free .description .description-content {
-	margin-left: 5px;
-	margin-top: 0;
-	content: "";
-	width: 215px;
-	display: block;
-	float: right;
-}
-///otro
-
 .block-wrap {
-	width: $container-size-w;
-	height: $container-size-h;
-	background: $xlt-gray;
-	border-bottom: 2px solid darken($xlt-gray, 15%);
-	box-shadow: inset 0 1px 0 lighten($xlt-gray, 5%), 0 8px 8px -8px darken($xlt-gray, 15%),
-		0 12px 12px -8px darken($xlt-gray, 5%);
+	// width: $container-size-w;
+	// height: $container-size-h;
+	background: #efefef;
+	border-bottom: 2px solid #c9c9c9;
+	box-shadow: inset 0 1px 0 #fcfcfc, 0 8px 8px -8px #c9c9c9, 0 12px 12px -8px #e2e2e2;
 	display: flex;
-	position: relative;
+	/* position: relative; */
 	overflow: hidden;
 	justify-content: center;
 	border-radius: 8px;
-	margin: auto;
-}
-.block-col {
-	display: flex;
-	height: 100%;
-	margin: 0 12px;
-	width: $block-size; //holds width when blocks are pos:abs
-	flex-shrink: 0;
-}
-
-.block {
-	height: $block-size;
-	width: 100%;
-	border-radius: 8px;
-	margin: auto 0;
-	position: relative;
-	will-change: transform;
-	&:not(.block--active) {
-		cursor: pointer;
-		&:hover,
-		&.fake-hover {
-			transform: translateY(-$hoverTranslate);
-			&:after {
-				// prevents awkard jittering on hover
-				content: "";
-				display: block;
-				position: absolute;
-				top: 0;
-				right: 0;
-				bottom: 0;
-				left: 0;
-				transform: scale(1.1) translateY($hoverTranslate);
-			}
-		}
-		&:active {
-			transform: scale(0.9) translateY(-$hoverTranslate);
-		}
-	}
-	&--active {
-		position: absolute;
-		left: 0;
-		z-index: 1;
-		height: 100%;
-		width: 100%;
-	}
-
-	&--transition {
-		transition: transform 0.185s $ease;
-	}
-	h5 {
-		color: white;
-		height: 100%;
-		font-size: medium;
-		padding-top: 38%;
-		text-align: center;
-		text-transform: uppercase;
-		font-family: "Open Sans", sans-serif;
-	}
-}
-
-@mixin colored($color) {
-	background: $color;
-	color: darken($color, 45%);
-	border-top: 2px solid lighten($color, 10%);
-
-	&:not(.block--active) {
-		border-bottom: 2px solid darken($color, 10%);
-		box-shadow: 0 8px 8px -8px darken($color, 15%), 0 12px 12px -8px rgba($color, 0.4);
-	}
-
-	&.block--active {
-		background: desaturate(lighten($color, 37.5%), 40%);
-	}
-}
-
-.r {
-	@include colored($red);
-}
-
-.b {
-	@include colored($blue);
-}
-
-.y {
-	@include colored($yellow);
-}
-
-.block-active {
-	opacity: 50%;
-	transform: scale(0.85);
+	/* margin-left: 38px; */
+	/* margin: auto;*/
 }
