--- a/apps/fit-buddy/src/app/dashboard/cart/cart-item/cart-item.component.scss
+++ b/apps/fit-buddy/src/app/dashboard/cart/cart-item/cart-item.component.scss
@@ -8,16 +8,16 @@
 
 .card {
 	border-radius: 25px;
-	border: 1px solid #e4c70f;
+	border: 1px solid #f3a712;
 	//box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
 }
 .card-body {
-	border-left: 1px solid #e4c70f;
+	border-left: 1px solid #f3a712;
 	height: 100%;
 }
 
 .btn {
-	color: #e4c70f;
+	color: #f3a712;
 }
 
 i {
