--- a/libs/ui/forms/src/lib/form-builder/form-builder.component.scss
+++ b/libs/ui/forms/src/lib/form-builder/form-builder.component.scss
@@ -1,5 +1,5 @@
 .btn-primary {
-	background-color: #e4c70f;
+	background-color: #f3a712;
 	text-transform: uppercase;
 	border-style: none;
 	border-radius: 25px;
