--- a/apps/fit-buddy/src/app/app.component.scss
+++ b/apps/fit-buddy/src/app/app.component.scss
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700,800");
 .orange-border {
 	border-radius: 25px;
-	border: 2px solid #e4c70f;
+	border: 2px solid #f3a712;
 	height: 100%;
 	padding: 20px;
 }
