--- a/apps/fit-buddy/src/app/dashboard/cart/order-sumary/order-sumary.component.scss
+++ b/apps/fit-buddy/src/app/dashboard/cart/order-sumary/order-sumary.component.scss
@@ -1,6 +1,6 @@
 .orange-border {
 	border-radius: 25px;
-	border: 1px solid #e4c70f;
+	border: 1px solid #f3a712;
 	min-height: 300px;
 	padding: 10px;
 }
@@ -12,7 +12,7 @@ span {
 }
 button {
 	padding: 20px;
-	background-color: #e4c70f;
+	background-color: #f3a712;
 	color: #fff;
 	width: 100%;
 }
