--- a/apps/fit-buddy/src/app/dashboard/nutrition-plan/nutrition-plan/nutrition-plan.component.html
+++ b/apps/fit-buddy/src/app/dashboard/nutrition-plan/nutrition-plan/nutrition-plan.component.html
@@ -1,6 +1,6 @@
 <div class="row justify-content-center">
-	<div class="col-4 col-sm-2">
-		<div class="block-wrap">
+	<div class="col-12 col-sm-10">
+		<div>
 			<gt-week-days (selected)="onDaySelected($event)"></gt-week-days>
 		</div>
 	</div>
