--- a/apps/fit-buddy/src/app/dashboard/nutrition-plan/week-days/week-days.component.scss
+++ b/apps/fit-buddy/src/app/dashboard/nutrition-plan/week-days/week-days.component.scss
@@ -1,120 +1,70 @@
-$container-size-h: 135px;
-$container-size-w: 1000px;
-$block-size: 100px;
-$xlt-gray: #efefef;
-$hoverTranslate: 12px;
-$ease: cubic-bezier(0.4, 0, 0, 1);
-$ease-in: cubic-bezier(0, 0, 0.2, 1);
-
-.block-col {
-	/* display: flex; */
-	/* float: left; */
-	/* height: 100%; */
-	margin: 0 6px;
-	width: 100px;
-	/* flex-shrink: 0;*/
-}
-
-.block {
-	height: $block-size;
-	width: 100%;
-	border-radius: 8px;
+.calendar {
 	position: relative;
-	will-change: transform;
-	&:not(.block--active) {
-		cursor: pointer;
-		&:hover,
-		&.fake-hover {
-			transform: translateY(-$hoverTranslate);
-			&:after {
-				// prevents awkard jittering on hover
-				content: "";
-				display: block;
-				position: absolute;
-				top: 0;
-				right: 0;
-				bottom: 0;
-				left: 0;
-				transform: scale(1.1) translateY($hoverTranslate);
-			}
-		}
-		&:active {
-			transform: scale(0.9) translateY(-$hoverTranslate);
-		}
-	}
-	&--active {
-		position: absolute;
-		left: 0;
-		z-index: 1;
-		height: 100%;
-		width: 100%;
-	}
-
-	&--transition {
-		transition: transform 0.185s $ease;
-	}
-	h5 {
-		color: white;
-		height: 100%;
-		font-size: medium;
-		padding-top: 38%;
-		text-align: center;
-		text-transform: uppercase;
-		font-family: "Open Sans", sans-serif;
-	}
+	margin: auto;
+	width: 70vw;
+	height: 70vw;
 }
 
-@mixin colored($color) {
-	background: $color;
-	color: darken($color, 45%);
-	border-top: 2px solid lighten($color, 10%);
-
-	&:not(.block--active) {
-		border-bottom: 2px solid darken($color, 10%);
-		box-shadow: 0 8px 8px -8px darken($color, 15%), 0 12px 12px -8px rgba($color, 0.4);
-	}
-
-	&.block--active {
-		background: desaturate(lighten($color, 37.5%), 40%);
-	}
+.base {
+	width: 70%;
+	height: 45%;
+	border-radius: 2vw;
+	box-shadow: 0.2vw 0.2vw 1vw 0 rgba(0, 0, 0, 0.27);
+	overflow: hidden;
+}
+.base.bottom {
+	position: absolute;
+	background-color: #fff;
+}
+.base.bottom .holes {
+	position: absolute;
+	top: 4%;
+	left: 4%;
+}
+.base.bottom::before {
+	content: " ";
+	display: block;
+	width: 100%;
+	height: 28%;
+	background-color: #29335c;
 }
 
-.block-active {
-	opacity: 50%;
-	transform: scale(0.85);
+.holes {
+	width: 128.5714285714%;
+	height: 200%;
+}
+.holes .hole {
+	background-color: #669bbc;
+	width: 4%;
+	height: 4%;
+	border-radius: 50%;
+	display: inline-block;
+	margin-left: 3.8vw;
+	box-shadow: inset 0.2vw 0.2vw 1vw 0 rgba(0, 0, 0, 0.27);
 }
 
-.monday {
-	@include colored(#76e08c);
+.days {
+	width: 90%;
+	height: 75%;
+	position: absolute;
+	top: 15%;
+	left: 5%;
+	display: grid;
+	grid-template: repeat(6, 1fr) / repeat(7, 1fr);
+	grid-gap: 0.2vw;
 }
-.tuesday {
-	@include colored(#6e93c9);
+.days > div {
+	text-align: center;
+	padding-top: 20%;
+	font-family: Roboto, sans-serif;
+	font-size: 1.8vw;
+	color: #29335c;
 }
-.wednesday {
-	@include colored(#f24b4d);
+.days > div.old {
+	color: #999;
 }
-.thursday {
-	@include colored(#ac81e8);
+.days > div.weekday {
+	font-weight: bold;
+	color: #f3a712;
+	cursor: pointer;
 }
-.friday {
-	@include colored(#ef9bcb);
-}
-.saturday {
-	@include colored(#1bb790);
-}
-.sunday {
-	@include colored(#71b6f2);
-}
-// @media only screen and (max-width: 600px) {
-// 	.block-active {
-// 		transform: scale(0.55);
-// 	}
-// 	.block {
-// 		transform: scale(0.65);
-// 	}
-// 	.block:hover,
-// 	:after {
-// 		background-color: yellow;
-// 		transform: scale(0.4);
-// 	}
-// }
