--- a/libs/ui/login/src/lib/welcome-banner/welcome-banner.component.scss
+++ b/libs/ui/login/src/lib/welcome-banner/welcome-banner.component.scss
@@ -1,5 +1,5 @@
 .welcome-container {
-	background-color: #e4c70f;
+	background-color: #f3a712;
 	color: white;
 	min-height: 211px;
 	clip-path: polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 0 49%, 0% 0%);
